nueva linea en README referencia a dotcloud

--- a/web2py/applications/blog/views/default/createpost.html
+++ b/web2py/applications/blog/views/default/createpost.html
@@ -4,6 +4,13 @@
    {{#     Not Default block}}
 {{#end}}
 
+<script type="text/javascript">
+tinyMCE.init({
+        mode : "textareas",
+        theme : "simple"  
+});
+</script>
+
 {{=DIV(H2(T("Crear nuevo artículo"), _class='title'), _align='center')}}
 <br/>
 <br/>
